--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,19 @@ INSTAGRAM_ACCESS_TOKEN=your_instagram_access_token_here
 # Target Instagram username
 TARGET_USERNAME=bbcnews
 
+# Google Gemini API Key for LLM integration
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# X.com (Twitter) API Credentials
+BEARER=your_twitter_bearer_token_here
+TWITTER_API_KEY=your_twitter_api_key_here
+TWITTER_API_SECRET=your_twitter_api_secret_here
+TWITTER_ACCESS_TOKEN=your_twitter_access_token_here
+TWITTER_ACCESS_SECRET=your_twitter_access_secret_here
+TWITTER_CLIENT_ID=your_twitter_client_id_here
+TWITTER_CLIENT_SECRET=your_twitter_client_secret_here
+CALLBACK_URL=your_callback_url_here
+
 # Server configuration
 PORT=3000
 
