--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "Module to fetch Instagram data from BBC News account",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "pnpm tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "lint": "eslint . --ext .ts"
+    "dev": "pnpm exec ts-node-dev --respawn --transpile-only src/index.ts",
+    "lint": "pnpm exec eslint . --ext .ts",
+    "lint:fix": "pnpm exec eslint . --ext .ts --fix",
+    "format": "pnpm exec prettier --write 'src/**/*.{ts,tsx}'",
+    "format:check": "pnpm exec prettier --check 'src/**/*.{ts,tsx}'",
+    "test": "pnpm exec jest",
+    "test:watch": "pnpm exec jest --watch",
+    "test:coverage": "pnpm exec jest --coverage",
+    "prepare": "pnpm build"
   },
   "keywords": [
     "instagram",
@@ -17,20 +24,40 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
+    "node-fetch": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-twitter": "^1.0.4",
     "puppeteer": "^21.5.2",
+    "twitter-api-v2": "^1.20.2",
+    "uuid": "^11.1.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.1",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.10.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-twitter": "^1.0.40",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
+    "nock": "^13.4.0",
+    "prettier": "^3.5.3",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   }
 }
