--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@google/generative-ai": "^0.24.0",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
+    "chrome-launcher": "^1.1.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
